--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -1,16 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400&display=swap');
 body{
-    background-color: hsl(0, 0%, 100%)
+    background-color:white;
+    
 }
 .tło {
-    background-color:  hsl(220, 15%, 55%);    
-    padding: 100px;
+    background-color: hsl(212, 45%, 89%);
+    padding: 90px;
 }
 .card {
     background-color: white;
     width: 200px;
     margin: 0 auto;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Outfit', sans-serif;
 
 }
-.foto{
+.photo{
     width: 200px;
+    border-radius: 10px;
+}
+.body{
+     padding: 80px 30px 80px 30px;
+}
+
+.title{
+    font-weight: bold
+}
+
+.content{
+    color: hsl(220, 15%, 55%);
+
 }
