--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -25,10 +25,13 @@ body{
 }
 
 .title{
-    font-weight: bold
+    font-weight: bold;
+    text-align: center;
 }
 
 .content{
+    font-size:12px;
     color: hsl(220, 15%, 55%);
+    text-align: center;
 
 }
