--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -22,20 +22,22 @@ body {
 }
 
 .text {
-	margin-top: 10px;
+	margin-top: 5px;
 	padding: 10px 10px;
-
 	text-align: center;
 }
 .text-large {
+    margin-top: 20px;
 	font-size: 20px;
 	font-weight: bold;
 }
 
 .text-small {
-	margin-top: 20px;
+	margin-top: 15px;
+    color: hsl(220, 15%, 55%)
 }
 
 img {
-    width: 90%;
+    width: 98%;
+    border-radius: 15px;
 }
