--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;600&display=swap');
 body{
     background-color:white;
     
@@ -6,6 +6,7 @@ body{
 .tło {
     background-color: hsl(212, 45%, 89%);
     padding: 90px;
+    box-shadow: 0px 5px 16px hsl(212deg 16% 77%)
 }
 .card {
     background-color: white;
@@ -14,6 +15,7 @@ body{
     padding: 10px;
     border-radius: 10px;
     font-family: 'Outfit', sans-serif;
+    box-shadow: 0px 5px 16px hsl(212deg 16% 77%)
 
 }
 .photo{
