--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -7,7 +7,7 @@ div {
     display: block;
     background-color: hsl(0, 0%, 100%);
     border-radius: 5%;
-    width: 250px;
+    width: 300px;
     height: 450px;
     margin: 150px auto;
     padding: 20px;
@@ -16,7 +16,7 @@ div {
 
 .QRCODE {
     width: 100%;
-    height: 100%;
+    height: 60%;
     border-radius: 5%;
     
 
@@ -28,7 +28,7 @@ p {
 }
 
 .first-paragraph {
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 700;
     margin: 10px;
     text-align: center;
@@ -36,9 +36,9 @@ p {
 
 .second-paragraph {
     display: block;
-    font-size: 10px;
+    font-size: 17px;
     font-weight: 400;
     margin: 10px;
     text-align: center;
-    color: Light gray hsl(212, 45%, 89%);
+    color:  hsl(220, 15%, 55%);
 }
