--- a/qr-code/project.css
+++ b/qr-code/project.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+
 .QR {
     height: 200px;
     border-radius: 5%;
@@ -7,6 +9,7 @@
 p {
     font-family: Outfit;
     font-size: 15px;
+
 }
 
 div {
@@ -19,7 +22,7 @@ div {
 }
 
 body {
-    background-color: hsl(12, 45%, 89%);
+    background-color: hsl(212, 45%, 89%);
 }
 
 .first-paragraph {
@@ -35,9 +38,5 @@ body {
     margin: 10px 15px 10px 15px;
     text-align: center;
     color: hsl(220, 15%, 55%);
-    font-size: 13px; 
-}
-
-strong {
-    font-weight: bold;
+    font-size: 12px; 
 }
