added paragraph and button

--- a/product-card/style.css
+++ b/product-card/style.css
@@ -43,6 +43,40 @@ span {
   margin-left: 20px;
   margin-top: -10px;
   width: 200px;
-  font-size: 13px;
+  font-size: 11px;
   line-height: 1.6;
+  font-family: "Montserrat", sans-serif;
+  color: hsl(228, 12%, 48%);
 }
+
+.price {
+  display: flex;
+  margin-left: 20px;
+}
+
+.p2 {
+  margin-left: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  margin-top: 20px;
+  text-decoration: line-through;
+  color: hsl(228, 12%, 48%);
+}
+
+.p1 {
+  font-size: 30px;
+  font-family: "Fraunces", serif;
+  margin-top: 10px;
+  color: hsl(158, 36%, 37%);
+}
+
+.button {
+  background-color: hsl(158, 36%, 37%);
+  margin-left: 35px;
+  width: 190px;
+  margin-right: 0px;
+  height: 40px;
+  display: flex;
+}
+
+.cart {height: 16px; width: 16px;}
