--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -1,44 +1,51 @@
-body {
-    background-color: hsl(212, 45%, 89%);  
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-div {
+body {
+    background-color: hsl(212, 45%, 89%); 
+}
+
+.container {
     background-color: hsl(0, 0%, 100%);
-    display: block;
-    width: 200px;
-    height: 360px;
+    width: 220px;
+    height: 340px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: 80px;
     margin-bottom: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
+}
+
+.image {
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;    
 }
 
 .first {
+    color: hsl(218, 44%, 22%);
     text-align: center;
-    margin: 10px;
+    margin: 5px 15px;
     font-weight: bold;
 }
 
 .second {
     text-align: center;
-    margin: 10px;
-    color: hsl(212, 45%, 89%);
-}
-
-.QR {
-    background-color: hsl(218, 44%, 22%);
-    border-radius: 10px;
-    height: 100%;
-    width: 100%;
+    font-size: 11px;
+    color: hsl(220, 15%, 55%);
+    margin: 10px 15px;
 }
 
 p {
     font-size: 15px;
-    font-family: Outfit;  
+    font-family: Outfit;
 }
 
-.image {
-    height: auto;
-    width: 100%;
-}
+
+
+
+
