--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -11,7 +11,7 @@ body {
 .container {
     background-color: hsl(0, 0%, 100%);
     width: 220px;
-    height: 340px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 80px;
@@ -42,7 +42,7 @@ body {
 
 p {
     font-size: 15px;
-    font-family: Outfit;
+    font-family: 'Outfit', sans-serif;
 }
 
 
