--- a/product-card/style.css
+++ b/product-card/style.css
@@ -12,8 +12,8 @@ body {
     background-color: hsl(0, 0%, 100%);
     display: flex;
     align-items: center;
-    width: 400px;
-    height: 300px;
+    width: 450px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 80px;
@@ -23,7 +23,41 @@ body {
 
 img {
     display: block;
-    height: 300px; 
+    height: 350px; 
     border-radius: 10px 0px 0px 10px; 
 }
 
+.right {
+    height: 100%;
+    padding: 25px;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif; 
+}
+
+h1,
+.current-price {
+    font-family: 'Fraunces', serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.description {
+    font-size: 10px;
+    color: hsl(228, 12%, 48%);
+    padding-bottom: 10px;
+}
+
+.perfume {
+    color: hsl(228, 12%, 48%);
+}
+
+.current-price {
+    color: hsl(158, 36%, 37%);
+    font-size: 22px; 
+}
+.previous-price {
+    font-size: 10px;
+    color: hsl(228, 12%, 48%)
+}
