--- a/product-card/style.css
+++ b/product-card/style.css
@@ -40,13 +40,13 @@ h1,
 .current-price {
     font-family: 'Fraunces', serif;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .description {
     font-size: 10px;
     color: hsl(228, 12%, 48%);
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .perfume {
@@ -56,10 +56,12 @@ h1,
 .current-price {
     color: hsl(158, 36%, 37%);
     font-size: 22px; 
+    padding-right: 15px;
 }
 .previous-price {
     font-size: 10px;
-    color: hsl(228, 12%, 48%)
+    color: hsl(228, 12%, 48%);
+    text-decoration: line-through;
 }
 
 .button {
@@ -67,17 +69,20 @@ h1,
     background-color: hsl(158, 36%, 37%);
     border: none;
     color: white;
-    padding: 10px 50px;
-    font-size: 14px;
+    padding: 10px 10px;
+    font-size: 11px;
     border-radius: 5px;
-  }
+    display: flex;
+    justify-content: center;
+}
 
-  .icon-card {
-    height: 15px;
-  }
+.icon-cart {
+    height: 12px;
+    padding-right: 10px;
+}
 
-  .price {
+.price {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    padding-bottom: 10px;
 }
