--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -17,7 +17,7 @@ body
     width: 375px;
     height: 500px;
     background-color:white;
-    border-radius: 10px;
+    border-radius: 10px ;
     position: absolute;
     
     
@@ -31,7 +31,7 @@ body
     font-size:15px;
     font-family: Outfit;
     text-align: center;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 .paragraph1
 {
@@ -48,4 +48,5 @@ body
     margin-right: 10px;
     width: 355px;
     height: 300px;
+    font-family:Outfit;
 }
