product-card/text-bottom

--- a/product-card/style.css
+++ b/product-card/style.css
@@ -8,10 +8,22 @@ body{
 
 .srodek{
     background-color:white;
+    width: 230px;
+    height: 300px;
     }
 
-    .tło{
-        width: 200px;
+    .produkt{
+        width: 700px;
         margin: 0 auto;
         display: flex;
+        align-items: center;
+        justify-content:center;
+    }
+
+    .button{
+       
+        background-color: hsl(158, 36%, 37%);
+        border-radius: 5px;
+        padding: 10px 50px;
+    
     }
