--- a/product-card/style.css
+++ b/product-card/style.css
@@ -1,50 +1,97 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 10px;
+}
+
 body {
     background-color: hsl(30, 38%, 92%);
+    width: 1440px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    
 }
 
 .First {
     background-color: hsl(30, 38%, 92%);
+    flex: 1 1 50%;
 }
 
 .Second {
     background-color: white;
+    border-radius: 0 5% 5% 0;
+    width: 600px;
+    margin: 0px;
 }
 
 button {
     background-color: hsl(158, 36%, 37%);
-    color:hsl(0, 0%, 100%);
+    color: white;
     border-radius: 5%;
+    width: 200px;
+    height:30px;
 }
 
 img {
-    border-radius: 5%;
+    border-radius: 5% 0 0 5%;
+    max-width: 100%;
+    height: 100%;
 }
 
 .Perfume {
 color: hsl(228, 12%, 48%);
-font-family: "Montserrat";
+font-family: 'Montserrat', sans-serif;
 font-weight: 500;
+text-transform:capitalize;
+letter-spacing:5px;
 }
 
 .Gabrielle {
 color: hsl(212, 21%, 14%);
-font-family: "Fraunces";
+font-family: 'Fraunces', serif;
 font-weight: 700;
+font-size: 40px;
 
 }
 
 .text {
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
 .price {
     color: hsl(158, 36%, 37%);
+    font-family: 'Fraunces', serif;
+    font-size: 40px;
 
 }
 
 .oldPrice {
     text-decoration: line-through;
+    font-family: 'Fraunces', serif;
+    font-weight: 100;
+
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+.prices {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+  
+
 
 }
