--- a/product-card/style.css
+++ b/product-card/style.css
@@ -1,15 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
+    
     body{
         background-color:rgb(227, 220, 200);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
         
     }
     .photo{
         width: 200px;
+       height: 100%;
+       border-radius: 10px 0px 0px 10px;
     }
 
     .srodek{
         background-color:white;
         width: 230px;
-        height: 300px;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 20px;
+        border-radius: 0px 10px 10px 0px;
         }
 
     .produkt{
@@ -18,6 +29,7 @@
         display: flex;
         align-items: center;
         justify-content:center;
+        height: 400px
     }
 
     .ikonka{
@@ -31,4 +43,7 @@
         padding: 10px 50px;
         border: none;
         color: white;
-
+    }
+    .zdjecie {
+        height: 100%;
+    }
