--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,24 +1,38 @@
 body{
     height: 100vh;
+    background-color: hsl(0, 0%, 98%)
 }
 .box1 {
     width: 300px;
     height: 200px;
+    background-color: white;
+    border-top: 5px solid hsl(180, 62%, 55%);
+    border-radius: 3%;
 }
+
 
 .box2 {
     width: 300px;
     height: 200px;
+    background-color: white;
+    border-top: 5px solid hsl(180, 62%, 55%);
+    border-radius: 3%;
 }
 
 .box3 {
     width: 300px;
     height: 200px;
+    background-color: white;
+    border-top: 5px solid hsl(180, 62%, 55%);
+    border-radius: 3%;
 }
 
 .box4 {
     width: 300px;
     height: 200px;
+    background-color: white;
+    border-top: 5px solid hsl(180, 62%, 55%);
+    border-radius: 3%;
 }
 .tekst{
 
