--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -5,5 +5,84 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 100vh;
 	font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    background-color: hsl(0, 0%, 98%);
 }
+
+.header {
+    height: 120px;
+    width: 280px;
+    /* border: 1px solid black; */
+    text-align: center;
+}
+
+.p-one {
+    color: hsl(229, 6%, 66%);
+}
+
+.p-two {
+    font-weight: bold;
+}
+
+.p-three {
+    color: hsl(229, 6%, 66%);
+    font-size: 10px;
+    padding: 0 40px;
+}
+
+.box {
+    height: 120px;
+    width: 250px;
+    border: 1px solid black;
+}
+
+.title {
+    font-weight: bold;
+}
+
+@media (min-width: 1440px)
+    {
+        .supervisor {
+            position: absolute;
+            bottom: 360px;
+            left: 140px;
+        }
+        .calculator {
+            position: absolute;
+            bottom: 360px;
+            right: 140px;
+        }
+
+        .box {
+            transform: scale(1.5);
+        }
+
+        .header {
+            position: relative;
+            top: -145px;
+            transform: scale(1.5);
+        }
+
+        .p-three {
+            padding: 0;
+        }
+
+        .team {
+            position: relative;
+            top: -40px;
+        }
+
+        .karma {
+            position: relative;
+            top: 40px;
+        }
+
+
+    }
