--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -48,12 +48,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  position: fixed;
-  left: 5vw;
-  right: 5vw;
-  bottom: 1vh;
-  top: 12vh;
+  margin-top: 4%;
 }
 
 .top {
@@ -74,7 +69,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 7vh;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 p {
@@ -154,4 +150,29 @@ p {
 
 img {
   height: 70px;
+}
+
+@media (max-width: 375px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .one {margin-left: 7.5%; margin-top: 10%;}
+  .two {
+    margin-top: 30px;
+  }
+  .four {
+    margin-top: 30px;
+    margin-left: 0px;
+  }
+  p {
+    width: 300px;
+  }
+  .top {
+    font-size: 1.75rem;
+  }
+  .bottom {
+    font-size: 1.75rem;
+  }
+  .header {margin-top: 20%;}
 }
