--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -2,38 +2,101 @@ body{
     height: 100vh;
     background-color: hsl(0, 0%, 98%)
 }
+
+
 .box1 {
-    width: 300px;
-    height: 200px;
+
+    width: 319px;
+    height: 238px;
     background-color: white;
     border-top: 5px solid hsl(180, 62%, 55%);
     border-radius: 3%;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
 }
+.t1{
+    padding: 10px;
+}
+
+
 
 
 .box2 {
-    width: 300px;
-    height: 200px;
+
+    width: 319px;
+    height: 238px;
     background-color: white;
-    border-top: 5px solid hsl(180, 62%, 55%);
+    border-top: 5px solid hsl(0, 78%, 62%);
     border-radius: 3%;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
 }
 
-.box3 {
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    border-top: 5px solid hsl(180, 62%, 55%);
-    border-radius: 3%;
+.t2{
+    padding: 10px;
 }
+
+
+
+
+
+.box3{
+        width: 319px;
+        height: 238px;
+        background-color: white;
+        border-top: 5px solid hsl(34, 97%, 64%);
+        border-radius: 3%;
+        padding: 20px;
+        box-sizing: border-box;
+        box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+}
+    
+ .t3{
+        padding: 10px;
+ }
+
+
+
+
+
 
 .box4 {
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    border-top: 5px solid hsl(180, 62%, 55%);
-    border-radius: 3%;
-}
-.tekst{
 
+            width: 319px;
+            height: 238px;
+            background-color: white;
+            border-top: 5px solid hsl(212, 86%, 64%);
+            border-radius: 3%;
+            padding: 20px;
+            box-sizing: border-box;
+            box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+}
+ .t4{
+            padding: 10px;
+    }
+
+
+
+    
+
+.icon1{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.icon2{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.icon3{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.icon4{
+    display: flex;
+    justify-content: flex-end;
 }
