--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -152,12 +152,16 @@ img {
   height: 70px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1110px) {
   .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
-  .one {margin-left: 7.5%; margin-top: 10%;}
+  .one {
+    margin-top: 10%;
+    margin-left: 30px;
+  }
   .two {
     margin-top: 30px;
   }
@@ -174,5 +178,7 @@ img {
   .bottom {
     font-size: 1.75rem;
   }
-  .header {margin-top: 20%;}
+  .header {
+    margin-top: 20%;
+  }
 }
