--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -53,6 +53,7 @@ h3{
     background-color: white;
     border-radius: 10px;
     padding: 25px;
+    box-shadow: 0px 0px 10px hsl(229, 6%, 66%);
 }
 
 .box-left {
@@ -83,6 +84,11 @@ h3{
 
 .box-right {
     align-self: center;
+}
+
+.img {
+    display: flex;
+    justify-content: flex-end;
 }
 
 
