--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -21,7 +21,7 @@ header {
 section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 25px;
     margin-top: 50px;
 }
 
@@ -50,6 +50,7 @@ h3{
 }
 
 .box {
+    height: 230px;
     background-color: white;
     border-radius: 10px;
     padding: 25px;
@@ -75,7 +76,7 @@ h3{
 .box-center {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
 }
 
 .box-left {
