--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -7,14 +7,18 @@ body{
 .box1 {
 
     width: 319px;
-    height: 238px;
+    height: 234px;
     background-color: white;
     border-top: 5px solid hsl(180, 62%, 55%);
     border-radius: 3%;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+    box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
+    margin-bottom: 78px;
+    position: absolute;
+    top: 50%;
 }
+
 .t1{
     padding: 10px;
 }
@@ -25,14 +29,19 @@ body{
 .box2 {
 
     width: 319px;
-    height: 238px;
+    height: 234px;
     background-color: white;
     border-top: 5px solid hsl(0, 78%, 62%);
     border-radius: 3%;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+    box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
+    margin-bottom: 78px;
+    position: absolute;
+    left: 370px;
+    top:230px;
 }
+
 
 .t2{
     padding: 10px;
@@ -43,14 +52,19 @@ body{
 
 
 .box3{
-        width: 319px;
-        height: 238px;
-        background-color: white;
-        border-top: 5px solid hsl(34, 97%, 64%);
-        border-radius: 3%;
-        padding: 20px;
-        box-sizing: border-box;
-        box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+    width: 319px;
+    height: 234px;
+    background-color: white;
+    border-top: 5px solid hsl(34, 97%, 64%);
+    border-radius: 3%;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
+    margin-bottom: 78px;
+    position: absolute;
+    left: 370px;
+    top: 503px;
+}
 }
     
  .t3{
@@ -64,14 +78,19 @@ body{
 
 .box4 {
 
-            width: 319px;
-            height: 238px;
-            background-color: white;
-            border-top: 5px solid hsl(212, 86%, 64%);
-            border-radius: 3%;
-            padding: 20px;
-            box-sizing: border-box;
-            box-shadow: 0px 1px 5px 1px hsl(229, 6%, 66%);
+    width: 319px;
+    height: 234px;
+    background-color: white;
+    border-top: 5px solid hsl(212, 86%, 64%);
+    border-radius: 3%;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
+    margin-bottom: 78px;
+    position: absolute;
+    left: 730px;
+    top: 370px;
+}
 }
  .t4{
             padding: 10px;
@@ -99,4 +118,12 @@ body{
 .icon4{
     display: flex;
     justify-content: flex-end;
+}
+
+.titlebox{
+font-size: 20px;
+}
+
+.textbox{
+font-size: 15px;
 }
