--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -18,7 +18,6 @@ body {
 .header {
 	height: 120px;
 	width: 200px;
-	/* border: 1px solid black; */
 	text-align: center;
 }
 
@@ -28,7 +27,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 10px;
+	gap: 15px;
 }
 
 .p-one {
@@ -40,36 +39,66 @@ body {
 }
 
 .p-three {
+	padding-top: 10px;
 	color: hsl(229, 6%, 66%);
 	font-size: 10px;
-	padding-top: 10px;
 }
 
 .box {
-	height: 120px;
-	width: 200px;
 	padding: 10px 20px;
-	border: 1px solid black;
+	height: 120px;
+	width: 180px;
+	background-color: white;
+	border-radius: 3px;
+	box-shadow: 0px 7px 20px hsl(229, 7%, 81%);
+}
+
+.supervisor {
+	border-top: 3px solid hsl(180, 62%, 55%);
+}
+
+.team {
+	border-top: 3px solid hsl(0, 78%, 62%);
+}
+
+.karma {
+	border-top: 3px solid hsl(34, 97%, 64%);
+}
+
+.calculator {
+	border-top: 3px solid hsl(212, 86%, 64%);
 }
 
 .text {
-	font-size: 8px;
+	padding-top: 4px;
+	padding-right: 5px;
 	color: hsl(229, 6%, 66%);
+	font-size: 7px;
 }
 
 .title {
 	font-weight: bold;
+	font-size: 12px;
+}
+
+img {
+	margin-left: 65%;
+	transform: scale(0.5);
 }
 
 @media (min-width: 800px) {
 	.supervisor {
 		position: absolute;
 		top: 25%;
-		left: -105%;
+		left: -110%;
 	}
 	.calculator {
 		position: absolute;
 		top: 25%;
-		right: -105%;
+		right: -110%;
+	}
+
+	.header {
+		width: 340px;
 	}
 }
