--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,19 +1,24 @@
+* {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 
 
 body {
-    width: 1440px;
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
     color: hsl(234, 12%, 34%);
     background: hsl(0, 0%, 98%);
-}
-.BIGcontainer {
-
+    margin: 20px;
+    
 }
 
 .smaller-text {
     display: flex;
     justify-content: center;
+    text-align: center;
 
 }
 .header{
@@ -22,12 +27,18 @@ body {
 }
 
 .Boxcontainer{
-    display: flex;
-    flex-direction: row;
-    width: 1440px;
+    max-width: 1440px;
+    align-items: center;
+    padding: 20px;
+    margin-left: 60px;
+    margin-right: 60px;
+
 
 }
-
+.row {
+    display: flex;
+    flex-direction: row;
+}
 h1 {
     font-weight: normal;
     
@@ -47,48 +58,49 @@ p {
 
 .box {
     height: 250px;
-    width: 100% ;
     background-color: hsl(0, 0%, 98%);
-    border: 1px solid black;
-    border-radius: 3%;
-    box-shadow: 0 0 10px hsl(234, 12%, 34%);
-    padding: 10px;
+    border-radius: 2%;
+    padding: 25px;
     position: relative;
-    margin: 30px;
+    box-shadow: 0px 0px 10px hsl(212, 86%, 64%);
+    overflow-wrap: break-word;
+    align-self: center;
+  
 }  
 .picture {
-position: absolute;
-bottom: 20px;
-right: 20px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
-.row {
-    display: flex;
-    justify-content: center;
 
-}
-.column {
-    display: flex;
-    justify-content: center;
 
-}
 
 .borderGreen {
     border-top: 5px solid green;
     flex-direction: column;
+    margin: 20px;
 }
 
 .borderRed {
     border-top: 5px solid red;
     flex-direction: column;
+    margin: 20px 20px 40px 20px;
 }
 
 .borderOrange {
     border-top: 5px solid orange;
     flex-direction: column;
+    margin: 20px 20px 40px 20px;
 }
 
 .borderBlue {
     border-top: 5px solid blue;
+    flex-direction: column;
+    margin: 20px;
+    
+
+}
+.BigColumn {
     flex-direction: column;
 }
