main to main-heading

--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -52,7 +52,7 @@ p {
   max-width: 550px;
   font-weight: 200;
 }
-.main {
+.main-heading {
   font-size: 18px;
   text-align: center;
   margin: 20px;
