--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,21 +1,39 @@
-p {
-    font-family: 'Poppins';
+* {
+    box-sizing: border-box;
+    font-size: 15px;
+    font-family: "Poppins";
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
 }
 
 .container-1 {
+    display: flex;
+    height: 100%;
     background-color: hsl(0,0%,98%);
-    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0px;
 }
 
 .text-1 {
     justify-content: center;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .item {
-    align-self: flex-start;
-    width: 375px;
+    align-self: center;
+    padding-right: 10px;
     color: hsl(229, 6%, 66%);
-    padding: 0px 15px;
 }
 
 .item-1 {
@@ -39,43 +57,71 @@ p {
 
 .container-2 {
     height: 100%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: hsl(0,0%,98%);
     margin: 15px 0px;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 .box {
     align-self: flex-start;
-    width: 375px;
     color: hsl(229, 6%, 66%);
-    padding: 0px 15px;
+    padding: 0px 0px;
     border-radius: 10px;
-    margin-bottom: 30px;
-    height: 250px;
+    margin: 0px 10px 30px 0px;
+    padding: 0px 15px 5px 10px;
 }
 
 .subtitle {
     font-size: 20px;
+    color: black;
 }
 
 .box-1 {
-    border: 1px solid black;
+    width: 400px;
+    height: 250px;
+    border: 1px solid hsl(229, 6%, 66%);
+    border-top: 5px solid;
+    border-top-color: hsl(180, 62%, 55%);
+    position: relative;
 }
 
 .box-2 {
-    border: 1px solid black;
+    width: 400px;
+    height: 250px;
+    border: 1px solid hsl(229, 6%, 66%);
+    border-top: 5px solid;
+    border-top-color: hsl(0, 78%, 62%);
+    position: relative;
 }
 
 .box-3 {
-    border: 1px solid black;
+    width: 400px;
+    height: 250px;
+    border: 1px solid hsl(229, 6%, 66%);
+    border-top: 5px solid;
+    border-top-color: hsl(34, 97%, 64%);
+    position: relative;
 }
 
 .box-4 {
-    border: 1px solid black;
+    width: 400px;
+    height: 250px;
+    border: 1px solid hsl(229, 6%, 66%);
+    border-top: 5px solid;
+    border-top-color: hsl(212, 86%, 64%);
+    position: relative;
 }
+
+.picture {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+}
+
 
 
 
