--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: hsl(212, 45%, 89%);
-        font-family: 'Outfit';
+    font-family: 'Outfit', sans-serif;
+    max-width: 1440px;
+    margin: 50px auto;
+    height: 100vh;
 }
 
 img {
@@ -10,11 +13,13 @@ img {
 }
 
 div {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     background: hsl(0, 0%, 100%);
     border-radius: 5%;
     height: 350px;
-    width: 220px;
+    width: 230px;
     margin: 200px auto;
     box-shadow: 0 0 20px lightgray;
 }
