--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -118,5 +118,81 @@
   right: 30px;
 }
 
-@media (min-width: 375px) {
+@media (min-width: 376px) {
+.box{
+  width: 30vh;
+  padding-bottom: 40px;
+  ;
 }
+.par-1{
+  height: 20vh;
+}
+.Item{
+  font-size: 2.5rem;
+}
+.Item-3{
+  font-size: 1.3rem;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+.container-2{
+  flex-wrap: wrap;
+  flex-direction: row;
+  height: 60vh;
+  gap: 10px;
+}
+
+.box-1{
+align-self: center;
+}
+.box-2{
+align-self: top;
+}
+.box-3{
+align-self: end;
+}
+.box-4{
+align-self: center;
+}
+
+
+
+
+
+
+
+
+/* .container-2{
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+height: 33%;
+
+}
+
+.box-1{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  
+}
+.box-2{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  
+}
+.box-3{
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.box-4{
+  grid-column: 3/4;
+  grid-row: 2/3;
+} */
+  
+
+
+
+
+}
+
