--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Poppins:wght@200;400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
 body{
     height: 100vh;
     background-color: hsl(0, 0%, 98%)
@@ -16,9 +15,10 @@ body{
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
-    margin-bottom: 78px;
-    position: absolute;
-    top: 50%;
+    top: 370px;
+    left: 10px;
+    margin-right: 30px;
+
 }
 
 .t1 {
@@ -37,10 +37,9 @@ body{
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
-    margin-bottom: 78px;
-    position: absolute;
     left: 370px;
     top:230px;
+    margin-bottom: 30px;
 }
 
 
@@ -59,7 +58,6 @@ body{
     box-sizing: border-box;
     box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
     margin-bottom: 78px;
-    position: absolute;
     left: 370px;
     top: 503px;
 }
@@ -78,10 +76,9 @@ body{
     padding: 20px;
     box-sizing: border-box;
     box-shadow: 0px 5px 35px -3px hsl(229deg 6% 66%);
-    margin-bottom: 78px;
-    position: absolute;
     left: 730px;
     top: 370px;
+    margin-left: 30px
 }
 
  .t4{
@@ -89,24 +86,28 @@ body{
     }
 
 .tekst{
-    width: 1050px;
-    height: 100vh;
+    width: 100%;
+    height: 30%;
     display:flex;
     flex-direction: column;
     align-items: center;
+    
 
 }
 
 #slim{
-    font-family: 'Poppins', sans-serif;
+   font-size: 30px;
+   margin: 10px;
 }
 
 #thick{
-    font-family: 'Fraunces', serif;
+    font-size: 30px;
+    margin: 10px;
 }
 
 #small{
-
+    font-size: 15px;
+    margin: 10px;
 }
     
 
@@ -136,4 +137,20 @@ font-size: 20px;
 
 .textbox{
 font-size: 15px;
+}
+
+.wall{
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+}
+
+.boxes {
+    width: 1060px;
+    position: relative;
+    display: flex;
+   justify-content: center;
+   align-items: center;
+    margin: 0 auto;
 }
