--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -7,7 +7,7 @@ body{
 
 .box1 {
 
-    width: 319px;
+    width: 360px;
     height: 234px;
     background-color: white;
     border-top: 5px solid hsl(180, 62%, 55%);
@@ -29,7 +29,7 @@ body{
 
 .box2 {
 
-    width: 319px;
+    width: 360px;
     height: 234px;
     background-color: white;
     border-top: 5px solid hsl(0, 78%, 62%);
@@ -49,7 +49,7 @@ body{
 
 
 .box3 {
-    width: 319px;
+    width: 360px;
     height: 234px;
     background-color: white;
     border-top: 5px solid hsl(34, 97%, 64%);
@@ -68,7 +68,7 @@ body{
 
 
 .box4 {
-    width: 319px;
+    width: 360px;
     height: 234px;
     background-color: white;
     border-top: 5px solid hsl(212, 86%, 64%);
@@ -114,21 +114,37 @@ body{
 .icon1{
     display: flex;
     justify-content: flex-end;
+    width: 260px;
+    height: 55px;
+    margin: -20px;
+    padding-left: 40px;
 }
 
 .icon2{
     display: flex;
     justify-content: flex-end;
+    width: 260px;
+    height: 55px;
+    margin: -20px;
+    padding-left: 40px;
 }
 
 .icon3{
     display: flex;
     justify-content: flex-end;
+    width: 260px;
+    height: 55px;
+    margin: -20px;
+    padding-left: 40px;
 }
 
 .icon4{
     display: flex;
     justify-content: flex-end;
+    width: 260px;
+    height: 55px;
+    margin: -20px;
+    padding-left: 40px;
 }
 
 .titlebox{
@@ -147,7 +163,7 @@ font-size: 15px;
 }
 
 .boxes {
-    width: 1060px;
+
     position: relative;
     display: flex;
    justify-content: center;
