--- a/product-card/style.css
+++ b/product-card/style.css
@@ -1,97 +1,159 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  padding: 0;
+  box-sizing: border-box;
 }
 html {
-    font-size: 10px;
+  font-size: 14px;
+  display: flex;
+  align-content: center;
+  max-width: 1440px;
+  height: 100%;
+  margin: 0 auto;
 }
 
 body {
-    background-color: hsl(30, 38%, 92%);
-    width: 1440px;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    
+  background-color: hsl(30, 38%, 92%);
+
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .First {
-    background-color: hsl(30, 38%, 92%);
-    flex: 1 1 50%;
+  background-color: hsl(30, 38%, 92%);
+  flex: 1 1 50%;
+  width: 50%;
 }
 
 .Second {
-    background-color: white;
-    border-radius: 0 5% 5% 0;
-    width: 600px;
-    margin: 0px;
+  background-color: white;
+  border-radius: 0 3% 3% 0;
+  width: 50%;
+  margin: 0px;
+  padding: 30px;
 }
 
 button {
-    background-color: hsl(158, 36%, 37%);
-    color: white;
-    border-radius: 5%;
-    width: 200px;
-    height:30px;
+  background-color: hsl(158, 36%, 37%);
+  color: white;
+  border-radius: 15px;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  border: none;
 }
 
 img {
-    border-radius: 5% 0 0 5%;
-    max-width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  border-radius: 3% 0 0 3%;
 }
 
 .Perfume {
-color: hsl(228, 12%, 48%);
-font-family: 'Montserrat', sans-serif;
-font-weight: 500;
-text-transform:capitalize;
-letter-spacing:5px;
+  color: hsl(228, 12%, 48%);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  text-transform: capitalize;
+  letter-spacing: 5px;
 }
 
 .Gabrielle {
-color: hsl(212, 21%, 14%);
-font-family: 'Fraunces', serif;
-font-weight: 700;
-font-size: 40px;
-
+  color: hsl(212, 21%, 14%);
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 40px;
+  padding-right: 60px;
+  line-height: 40px;
 }
 
 .text {
-    font-size: 14px;
-    font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
-
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  color: hsl(228, 12%, 48%);
+  padding-right: 60px;
+  line-height: 25px;
 }
 
 .price {
-    color: hsl(158, 36%, 37%);
-    font-family: 'Fraunces', serif;
-    font-size: 40px;
-
+  color: hsl(158, 36%, 37%);
+  font-family: "Fraunces", serif;
+  font-size: 40px;
+  text-align: left;
 }
 
 .oldPrice {
-    text-decoration: line-through;
-    font-family: 'Fraunces', serif;
-    font-weight: 100;
-
+  text-decoration: line-through;
+  color: hsl(228, 12%, 48%);
+  font-weight: 100;
 }
 
 section {
-    display: flex;
-    justify-content: center;
-    align-self: center;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  height: 50vh;
+  width: 60vh;
 }
 .prices {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
-  
+.cart {
+  height: auto;
+  width: auto;
+}
 
+.buttonSet {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
 
+@media (max-width: 376px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 3% 3% 0 0;
+  }
+  .First {
+    width: auto;
+    margin: 0 20px;
+  }
+  .Second {
+    background-color: white;
+    border-radius: 0 0 3% 3%;
+    width: auto;
+    margin: 0 20px;
+  }
+
+  .Gabrielle {
+    padding-right: 0;
+    font-size: 35px;
+  }
+
+  .text {
+    padding-right: 10px;
+  }
 }
