--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -8,6 +8,7 @@
 
 body{
     height: 100vh;
+    margin: 45px;
 }
 nav {
     display: flex;
@@ -38,7 +39,14 @@ i {
     font-size: 45px;
 }
 
+h2{
+    color: hsl(35, 77%, 62%);
+    font-size: 2rem;
+}
 
+h3{
+    font-size: 1.5rem;
+}
 main{
     display: grid;
     grid-template-columns: repeat(3,1fr) ;
@@ -54,6 +62,7 @@ main{
 .main-content{
     grid-row: 2/3 ;
     grid-column: 1/2 ; 
+    justify-self: start;
 }
 
 .secondary-content{
@@ -62,9 +71,13 @@ main{
 }
  
 
-.side-bar{
+.sidebar{
     grid-row: 1/3 ;
     grid-column: 3/4 ; 
+    background-color: hsl(240, 100%, 5%);
+    color: white;
+    padding: 20px;
+    
 }
 
 .bottom-main-content-1{
