--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -1,8 +1,12 @@
 *{
     font-family: 'Inter', sans-serif;
     padding: 0;
-    margin: 0;
     box-sizing: border-box;
+    font-size: 15px;
+}
+body{
+    height: 100vh;
+    margin: 45px;
 }
 nav {
     display: flex;
@@ -31,6 +35,53 @@ div.hamburger{
 }
 i {
     font-size: 45px;
+}
+main{
+    display: grid;
+    grid-template-columns: repeat(3,1fr) ;
+    grid-template-rows:50% 25% 25%;
+    column-gap: 30px ;
+    row-gap: 40px ;
+}
+.main-picture{
+    grid-row: 1/2 ;
+    grid-column: 1/3 ;
+}
+.main-content{
+    grid-row: 2/3 ;
+    grid-column: 1/2 ;
+    justify-self: start;
+}
+.secondary-content{
+    grid-row: 2/3 ;
+    grid-column: 2/3 ;
+}
+.sidebar{
+    grid-row: 1/3 ;
+    grid-column: 3/4 ;
+    background-color: hsl(240, 100%, 5%);
+    color: white;
+}
+.bottom-main-content-1{
+    grid-row: 3/4 ;
+    grid-column: 1/4 ;
+}
+.bottom-main-content-2{
+    grid-row: 3/4 ;
+    grid-column: 2/3 ;
+}
+.bottom-main-content-3{
+    grid-row: 3/4 ;
+    grid-column: 3/4 ;
+}
+.number{
+    color: hsl(233, 8%, 79%)
+}
+.picture{
+   width: 100px;
+}
+.picture-1{
+    width: 100%;
 }
 @media screen and (max-width: 768px){
     ul.nav-desktop {
