--- a/Project 3/styles.css
+++ b/Project 3/styles.css
@@ -151,7 +151,12 @@ h5 {
 
 .botp {
   font-size: 15px;
-  margin-top: 7%;
+  margin-top: 9%;
   margin-left: 5%;
   color: hsl(236, 13%, 42%);
+}
+
+@media (max-width: 1250px) {
+.container {display: inline-block;}
+.main {margin-bottom: 0; height: 600px;}
 }
